# bluearf-nova-sdk

./: .gitignore  LICENSE  README.md
.agents/plugins/: marketplace.json
.github/workflows/: publish-pypi.yml  python-check.yml
docs/en/: README.md
docs/tr/: README.md
examples/: passenger_commercial_rows.en.json  passenger_commercial_rows.tr.json
plugins/bluearf-nova/: README.md
plugins/bluearf-nova/.codex-plugin/: plugin.json
plugins/bluearf-nova/scripts/: bluearf-nova  check-bluearf-nova
plugins/bluearf-nova/skills/bluearf-nova/: SKILL.md
python/: MANIFEST.in  README.md  pyproject.toml
python/bluearf_nova/: __init__.py  cli.py  client.py
scripts/: build_python.sh  check.sh  export_standalone_repo.sh  publish_pypi.sh
